fixing issue with authentication request object...

--- a/views/content/auth/login.ejs
+++ b/views/content/auth/login.ejs
@@ -7,7 +7,7 @@
 		<!--begin::Form-->
         <form class="kt-login-v2__form kt-form" action="/login" autocomplete="off" id="kt_login_form" method="POST">
             <div class="form-group">
-                <input class="form-control" type="email" placeholder="Email" name="username" autocomplete="off">
+                <input class="form-control" type="email" placeholder="Email" name="email" autocomplete="off">
             </div><br>
             <div class="form-group">
                 <input class="form-control" type="password" placeholder="Password" name="password" autocomplete="off">
